--- a/charts/microservice-chart/templates/pd-ingress.yaml
+++ b/charts/microservice-chart/templates/pd-ingress.yaml
@@ -1,18 +1,18 @@
-{{- if and .Values.progressiveDelivery.create .Values.progressiveDelivery.ingress.create -}}
+{{- if and .Values.canaryDelivery.create .Values.canaryDelivery.ingress.create -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "microservice-chart.fullnameProgressiveDelivery" . }}
+  name: {{ include "microservice-chart.fullnamecanaryDelivery" . }}
   namespace: {{ .Values.namespace }}
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: {{ .Values.ingress.rewriteTarget }}
     nginx.ingress.kubernetes.io/force-ssl-redirect: {{ .Values.ingress.forceSslRedirect | quote }}
-    {{- if and .Values.progressiveDelivery.ingress.canary (eq .Values.progressiveDelivery.ingress.canary.type "header") }}
+    {{- if and .Values.canaryDelivery.ingress.canary (eq .Values.canaryDelivery.ingress.canary.type "header") }}
     nginx.ingress.kubernetes.io/canary: "true"
-    nginx.ingress.kubernetes.io/canary-weight: {{ .Values.progressiveDelivery.ingress.canary.weightPercent|quote }}
-    nginx.ingress.kubernetes.io/canary-by-header: {{ .Values.progressiveDelivery.ingress.canary.headerName|quote }}
-    nginx.ingress.kubernetes.io/canary-by-header-value: {{ .Values.progressiveDelivery.ingress.canary.headerValue|quote }}
+    nginx.ingress.kubernetes.io/canary-weight: {{ .Values.canaryDelivery.ingress.canary.weightPercent|quote }}
+    nginx.ingress.kubernetes.io/canary-by-header: {{ .Values.canaryDelivery.ingress.canary.headerName|quote }}
+    nginx.ingress.kubernetes.io/canary-by-header-value: {{ .Values.canaryDelivery.ingress.canary.headerValue|quote }}
     {{- end }}
 spec:
   ingressClassName: nginx
@@ -26,7 +26,7 @@ spec:
                 port:
                   number: {{ .Values.service.port }}
             pathType: {{ .Values.ingress.pathType }}
-            {{- if eq .Values.progressiveDelivery.ingress.canary.type "bluegreen" }}
+            {{- if eq .Values.canaryDelivery.ingress.canary.type "bluegreen" }}
             path: /beta{{ .Values.ingress.path }}
             {{- else }}
             path: {{ .Values.ingress.path }}
