--- a/charts/microservice-chart/templates/pd-services.yaml
+++ b/charts/microservice-chart/templates/pd-services.yaml
@@ -1,11 +1,11 @@
-{{- if and .Values.progressiveDelivery.create .Values.progressiveDelivery.service.create -}}
+{{- if and .Values.canaryDelivery.create .Values.canaryDelivery.service.create -}}
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "microservice-chart.fullnameProgressiveDelivery" . }}
+  name: {{ include "microservice-chart.fullnamecanaryDelivery" . }}
   namespace: {{ .Values.namespace }}
   labels:
-    {{- include "microservice-chart.labelsProgressiveDelivery" . | nindent 4 }}
+    {{- include "microservice-chart.labelscanaryDelivery" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -14,6 +14,6 @@ spec:
       targetPort: {{ .Values.service.port }}
       protocol: TCP
   selector:
-    {{- include "microservice-chart.selectorLabelsProgressiveDelivery" . | nindent 4 }}
+    {{- include "microservice-chart.selectorLabelscanaryDelivery" . | nindent 4 }}
 {{- end }}
 
