--- a/charts/microservice-chart/templates/pd-services.yaml
+++ b/charts/microservice-chart/templates/pd-services.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "microservice-chart.fullnamecanaryDelivery" . }}
+  name: {{ include "microservice-chart.fullnameCanaryDelivery" . }}
   namespace: {{ .Values.namespace }}
   labels:
-    {{- include "microservice-chart.labelscanaryDelivery" . | nindent 4 }}
+    {{- include "microservice-chart.labelsCanaryDelivery" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -14,6 +14,6 @@ spec:
       targetPort: {{ .Values.service.port }}
       protocol: TCP
   selector:
-    {{- include "microservice-chart.selectorLabelscanaryDelivery" . | nindent 4 }}
+    {{- include "microservice-chart.selectorLabelsCanaryDelivery" . | nindent 4 }}
 {{- end }}
 
