feat: Canary poc (#60)
* fix: Mock release

* added progressing-delivery app for test

* init

* first run ok

* renamed functions

* added added first part of progressive delivery items

* ingress Blue green completed

* ingress canary in beta

* gitignore added DELETEME files

* completed canary weight

* change name to progressing-delivery to progressive-delivery

* fix values for ingress

* changed progressiveDelivery to canaryDelivery

* changed functions names

* default values for chart

* updated example values for progressive delivery

* upgrade version to 1.18.0

* pre-commit helm docs

* updated pre-commit

* Fix liveness and readyness port

* minor fix

--- a/charts/microservice-chart/templates/services.yaml
+++ b/charts/microservice-chart/templates/services.yaml
@@ -9,10 +9,10 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
+    - name: app-port-{{ .Values.service.port }}-svc
+      port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.port }}
       protocol: TCP
-      name: app-port-{{ .Values.service.port }}-svc
   selector:
     {{- include "microservice-chart.selectorLabels" . | nindent 4 }}
 {{- end }}
